# banquet-signature-variants

./: Readme.md
em-banquet/: README.md  aes.cpp  aes.h  banquet_instances.cpp  banquet_instances.h
em-banquet/tools/: bench_all.py  bench_free.cpp
em-lsaes-banquet/: CMakeLists.txt  README.md  aes.cpp  aes.h  banquet.cpp  banquet_instances.cpp  banquet_instances.h  types.h
em-lsaes-banquet/tools/: bench_all.py  bench_free.cpp  bench_utils.h
lsaes-banquet/: CMakeLists.txt  README.md  aes.cpp  aes.h  banquet.cpp  banquet_instances.cpp  banquet_instances.h  field.cpp  field.h
lsaes-banquet/tools/: bench.cpp  bench_all.py  bench_free.cpp  bench_utils.cpp
